# speech-maturity

./: .gitmodules  README.md  infer.py  pyproject.toml  requirements.txt  run.sh
hparams/: hparams.yaml
scripts/: gen_json.py  infer.py
