[project]
name = "speech-maturity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fairseq",
    "librosa==0.11.0",
    "pandas==2.3.0",
    "speechbrain",
    "torch==2.6",
    "transformers==4.53.0",
]

[tool.uv.sources]
speechbrain = { git = "ssh://git@github.com/arxaqapi/speechbrain" }
fairseq = { git = "https://github.com/Tps-F/fairseq.git", rev = "ff08af2" }
